<resources>
    <string name="app_name">BTEB Result </string>
    <string name="ad_id">ca-app-pub-5474497946967422/7341540413</string>
    <string name="test_ad_id">ca-app-pub-3940256099942544/1033173712</string>

    <string name="share_link">https://play.google.com/store/apps/details?id=com.forbitbd.diploma</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="developer_information">Developer Information</string>
    <string name="company_information">Company Information</string>
    <string name="forbit_limited">Forbit Limited</string>
    <string name="mirpur_1_dhaka_1216_bangladesh">Mirpur-1, Dhaka-1216, Bangladesh</string>
    <string name="forbit_bd_gmail_com">forbit.bd@gmail.com</string>
    <string name="md_saimul_hoque">Saimul Hoque</string>
    <string name="abid_ahmed_sobhan">Abid Ahmed Sobhan</string>
    <string name="saimulhoque8214_gmail_com">saimulhoque8214@gmail.com</string>
    <string name="abidasobhan19_gmail_com">abidasobhan19@gmail.com</string>
    <string name="select_semester">Select Semester</string>
    <string name="select_exam_year">Select Exam Year</string>
    <string name="get_result">Get Result</string>
    <string name="developer_team">Developer Team</string>
    <string name="enter_your_board_roll">Enter your Board Roll</string>
    <string name="when_bteb_bangladesh_technical_education_board_will_publish_the_result_you_can_easily_get_your_result_from_here">When BTEB (Bangladesh Technical Education Board) Will Publish The Result, You Can Easily Get Your Result From Here</string>
    <string name="bteb_result">BTEB RESULT</string>
    <string name="calculate">Calculating CGPA Depends On Every Semester GPA. Semester GPA Calculate by Grade Points and Credit. It’s Very Easy To Calculate Your CGPA From Here. You Need Your Grade or Grade Points. If You Have These Credentials, You Can Easily Calculate your CGPA From This App.</string>

    <string-array name="exm_year">
        <item>Select Your Exam Year</item>
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
    </string-array>

    <string-array name="exm_semester">
        <item>Select Your Semester</item>
        <item>8</item>
        <item>7</item>
        <item>6</item>
        <item>5</item>
        <item>4</item>
    </string-array>

    <string-array name="technology">
        <item>Select Your Technology</item>
        <item>Civil</item>
        <item>Electrical</item>
        <item>Mechanical</item>
        <item>Computer</item>
        <item>Electronics</item>
        <item>Power</item>
        <item>Automobile</item>
        <item>Architecture</item>
        <item>Construction</item>
        <item>Environment</item>
        <item>Telecommunication</item>
        <item>Marine</item>
        <item>Textile</item>
        <item>Garments</item>
    </string-array>

</resources>