<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ActivityDev"
    android:background="#F1F1F1"
    android:padding="10dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/forbit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="0dp"
                app:cardElevation="2dp"
                android:clickable="true"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/company_information"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/purple_dark"
                        android:padding="8dp"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:gravity="center"/>

                    <ImageView
                        android:layout_marginTop="10dp"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/forbiticon"/>

                    <TextView
                        android:text="@string/forbit_limited"
                        android:gravity="center"
                        style="@style/nametext"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp">

                            <info.androidhive.fontawesome.FontTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/fa_map_marker_alt_solid"
                                android:textColor="@color/purple_dark"
                                android:textSize="22sp"
                                app:solid_icon="true"/>

                            <TextView
                                android:layout_marginStart="10dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/mirpur_1_dhaka_1216_bangladesh"
                                android:layout_gravity="center_vertical"
                                android:textSize="18sp"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp">

                            <info.androidhive.fontawesome.FontTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/fa_envelope_solid"
                                android:textColor="@color/purple_dark"
                                android:textSize="22sp"
                                app:solid_icon="true" />

                            <TextView
                                android:layout_marginStart="10dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/forbit_bd_gmail_com"
                                android:layout_gravity="center_vertical"
                                android:textSize="18sp"/>

                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/devinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple_dark"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/developer_information"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_below="@id/forbit"
                android:layout_marginBottom="8dp"/>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="0dp"
                app:cardElevation="2dp"
                android:id="@+id/abid"
                android:layout_below="@+id/devinfo"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_gravity="center"
                        android:layout_height="90dp"
                        android:src="@drawable/abid"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_marginStart="10dp"
                        android:orientation="vertical"
                        android:layout_marginTop="10dp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="@string/abid_ahmed_sobhan"
                            style="@style/nametext"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="3dp"
                            android:layout_marginBottom="5dp"
                            android:orientation="horizontal">

                            <info.androidhive.fontawesome.FontTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/fa_envelope_solid"
                                android:textColor="@color/purple_dark"
                                android:textSize="22sp"
                                app:solid_icon="true"/>

                            <TextView
                                android:layout_marginStart="10dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/abidasobhan19_gmail_com"
                                android:layout_gravity="center_vertical"
                                android:textSize="16sp"/>

                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="0dp"
                app:cardElevation="2dp"
                android:id="@+id/saimul"
                android:layout_below="@id/abid"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_gravity="center"
                        android:layout_height="90dp"
                        android:src="@drawable/saimul"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_marginStart="10dp"
                        android:orientation="vertical"
                        android:layout_marginTop="10dp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="@string/md_saimul_hoque"
                            style="@style/nametext"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="3dp"
                            android:layout_marginBottom="5dp"
                            android:orientation="horizontal">

                            <info.androidhive.fontawesome.FontTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/fa_envelope_solid"
                                android:textColor="@color/purple_dark"
                                android:textSize="22sp"
                                app:solid_icon="true"/>

                            <TextView
                                android:layout_marginStart="10dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/saimulhoque8214_gmail_com"
                                android:layout_gravity="center_vertical"
                                android:textSize="16sp"/>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <Button
                android:id="@+id/moreapps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Our Other Apps"
                android:layout_alignParentBottom="true"/>

</RelativeLayout>